# miniml-compiler-haskell-spbu

./: .gitignore  CodeGen-Llvm-Ir2LlvmIr.html  CodeGen-Llvm-LlvmIrGen.html  CodeGen-Llvm-Runner.html  CodeGen-Module.html  CodeGen-RiscV-AsmGen.html  CodeGen-RiscV-Lib-Monad.html  CodeGen-RiscV-Lib-Types.html  CodeGen-RiscV-Lib.html  CodeGen-RiscV-Runner.html  CodeGen-RunResult.html  CodeGen-Runtime-PrintRuntime.html  CodeGen-TimedValue.html  LICENSE  MonadUtils.html  Parser-Ast.html  Parser-Lexer.html  Parser-Parser.html  Parser-Utils.html  README.md  StdLib.html  Transformations-Anf-Anf.html  Transformations-Anf-AnfGen.html  Transformations-Anf-PrettyPrinter.html  Transformations-Cc-Cc.html  Transformations-Ll-Lfr.html  Transformations-Ll-Ll.html  Transformations-Relabeler-Relabeler.html  Transformations-Simplifier-SimplifiedAst.html  Transformations-Simplifier-Simplifier.html  Trees-Common.html  TypeChecker-HindleyMilner.html  TypeChecker-PrettyPrinter.html  TypeChecker-TypeChecker.html  cabal.project  cabal.project.freeze  doc-index-61.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  (+26 more)
.github/workflows/: build.yml  docs.yml
app/: Main.hs  Utils.hs
app/Commands/: Compile.hs  PrintCRuntime.hs  Run.hs  Verify.hs
app/Components/: Compile.hs  Run.hs  Verify.hs
app/Configuration/: AppConfiguration.hs  CommonParsers.hs
app/Configuration/Commands/: Compile.hs  MiniMl.hs  PrintCRuntime.hs  Run.hs  Verify.hs
docs/dev/: flow.md  impl.md  todo.md
lib/: Greeter.hs  MaybeVoid.hs  MonadUtils.hs  StdLib.hs  Utils.hs
lib/CodeGen/: Module.hs  RunResult.hs  Tast.hs  TimedValue.hs
lib/CodeGen/Llvm/: Ir2LlvmIr.hs  LlvmIrGen.hs  Runner.hs  TastToLlvm.hs
lib/CodeGen/RiscV/: AsmGen.hs  Lib.hs  RiscVGen.hs  RiscVLib.hs  Runner.hs
lib/CodeGen/RiscV/Lib/: Monad.hs  Types.hs
lib/CodeGen/Runtime/: PrintRuntime.hs  runtime.c  stdlib.c
lib/Parser/: Ast.hs  Lexer.hs  Parser.hs  Utils.hs
lib/Transformations/: Anf.hs  AnfPrettyPrint.hs  AnfPrettyPrinter.hs  AstToAnf.hs  AstToTypelessAst.hs  PrettyPrint.hs  RelabelVars.hs  TypelessAst.hs  TypelessAstToAnf.hs
lib/Transformations/Anf/: Anf.hs  AnfGen.hs  PrettyPrinter.hs
lib/Transformations/Cc/: Cc.hs
lib/Transformations/Ll/: Lfr.hs  Ll.hs
lib/Transformations/Relabeler/: RelabelVars.hs  Relabeler.hs
lib/Transformations/Simplification/: SimplifiedAst.hs  SimplifyAst.hs
lib/Transformations/Simplifier/: SimplifiedAst.hs  Simplifier.hs
lib/Trees/: Common.hs
lib/TypeChecker/: HindleyMilner.hs  PrettyPrinter.hs  TypeChecker.hs
lib/TypeInference/: HindleyMilner.hs  PrettyPrint.hs  Runtime.hs  TIRealization.hs  TypeInference.hs
src/: CodeGen.Llvm.Ir2LlvmIr.html  CodeGen.Llvm.LlvmIrGen.html  CodeGen.Llvm.Runner.html  CodeGen.Module.html  CodeGen.RiscV.AsmGen.html  CodeGen.RiscV.Lib.Monad.html  CodeGen.RiscV.Lib.Types.html  CodeGen.RiscV.Lib.html  CodeGen.RiscV.Runner.html  CodeGen.RunResult.html  CodeGen.Runtime.PrintRuntime.html  CodeGen.TimedValue.html  MonadUtils.html  Parser.Ast.html  Parser.Lexer.html  Parser.Parser.html  Parser.Utils.html  StdLib.html  Transformations.Anf.Anf.html  Transformations.Anf.AnfGen.html  Transformations.Anf.PrettyPrinter.html  Transformations.Cc.Cc.html  Transformations.Ll.Lfr.html  Transformations.Ll.Ll.html  Transformations.Relabeler.Relabeler.html  Transformations.Simplifier.SimplifiedAst.html  Transformations.Simplifier.Simplifier.html  Trees.Common.html  TypeChecker.HindleyMilner.html  TypeChecker.PrettyPrinter.html  TypeChecker.TypeChecker.html
test/: FactorialTest.hs  Main.hs  StdLibTest.hs  Utils.hs
test-integration/: test.sh
test/Integration/: FactorialTest.hs
test/Parser/: ParserTest.hs
test/Sample/: AnfTest.hs  FactorialTest.hs  FibonacciTest.hs  SimpleTest.hs  Utils.hs
test/Sample/Anf/: DuplicateDeclaration.anf  DuplicateDeclaration.ml  HardTest.anf  HardTest.ml  SimpleTest.anf  SimpleTest.ml  Test.anf  Test.ml
test/Sample/Factorial/: FacRec.anf  FacRec.ast  FacRec.ll  FacRec.ml  FacRec.s  FacRec.ti  FacRecCps.anf  FacRecCps.ast  FacRecCps.ll  FacRecCps.ml  FacRecCps.s  FacRecLoop.anf  FacRecLoop.ast  FacRecLoop.ll  FacRecLoop.ml  FacRecLoop.s
test/Sample/Fibonacci/: FibRec.anf  FibRec.ast  FibRec.ll  FibRec.ml  FibRec.s  FibRecCps.anf  FibRecCps.ast  FibRecCps.ll  FibRecCps.ml  FibRecCps.s  FibRecLoop.anf  FibRecLoop.ast  FibRecLoop.ll  FibRecLoop.ml  FibRecLoop.s
test/Sample/Simple/: SimpleTest.anf  SimpleTest.ast  SimpleTest.ll  SimpleTest.ml  SimpleTest.s
test/TypeInference/: TypeInferenceTest.hs
test/Unit/: StdLibTest.hs
test/Unit/Parser/: ParserTest.hs
test/Unit/TypeInference/: TypeInferenceTest.hs
